# iDFusion

./: BasicAPI.cpp  BasicAPI.h  CMakeLists.txt  README.md  build.sh  head.h  main.cpp  parameter.cpp  parameter.h  sparce_show.cpp  sparce_show.h
CHISEL/src/: CMakeLists.txt
CHISEL/src/open_chisel/: Chisel.cpp  Chisel.h  ChunkManager.cpp  Stopwatch.h
GCFusion/: MobileFusion.cpp  MobileFusion.h  MobileGUI.hpp
GCSLAM/: GCSLAM.cpp  GCSLAM.h  MultiViewGeometry.cpp  MultiViewGeometry.h  frame.h  matrix_youhua.cpp  matrix_youhua.h
GCSLAM/IMU/: imudata.cpp  imudata.h  so3_cal.cpp  so3_cal.h
GCSLAM/MILD/: loop_closure_detector.hpp  mild.hpp  sparse_match.hpp
GCSLAM/PLANE/: peac_plane_detect.cpp  peac_plane_detect.h
Parameters/: canshu.yaml  settings.yaml
